ajuste para Ambiente Java da Aml